# Automating-3DSurvival-Playing

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  setup.py
agent/: browser.py  executor.py  loop.py  run_logger.py
agent/planner/: __init__.py  goal_maker.py  helpers.py  planner_llm.py
memory/: memory.json  memory.py
