[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-playable-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "python-dotenv",
    "openai",
    "pillow",
]

[project.scripts]
agent = "main:run"
setup-browser = "setup:run"

[tool.hatch.build.targets.wheel]
packages = ["agent", "memory"]
